--- a/package.json
+++ b/package.json
@@ -38,10 +38,10 @@
         "gulp-wp-pot": "^2.3.3",
         "json-server": "^0.14.2",
         "motion-ui": "^2.0.3",
-        "node-sass": "^4.11.0",
         "postcss-loader": "^3.0.0",
         "pre-push": "^0.1.1",
-        "sass-loader": "^7.1.0",
+        "sass-loader": "^7.2.0",
+        "sass": "^1.54.3",
         "style-loader": "^0.23.1",
         "system-bell-webpack-plugin": "^1.0.0",
         "webpack": "^4.29.5",
