--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
     "version": "2.2.6-2",
     "description": "Calendar+",
     "main": "gulpfile.babel.js",
-    "type": "module",
     "dependencies": {
         "core-js": "^2.6.9",
         "es6-promise": "^4.2.6",
@@ -34,7 +33,7 @@
         "gulp-archiver": "^0.0.0",
         "gulp-clean": "^0.4.0",
         "gulp-phpcs": "^3.1.0",
-        "gulp-wp-pot": "^2.3.3",
+        "gulp-wp-pot": "^2.5.0",
         "json-server": "^1.0.0-beta.1",
         "mini-css-extract-plugin": "^2.9.0",
         "motion-ui": "^2.0.3",
@@ -47,7 +46,8 @@
         "webpack-cli": "^5.1.4",
         "webpack-dev-server": "^5.0.4",
         "webpack-merge": "^4.2.1",
-        "what-input": "^5.1.3"
+        "what-input": "^5.1.3",
+        "@ilabdev/copy": "^1.0.0"
     },
     "scripts": {
         "postinstall_disabled": "npm run build && npm run gulp",
