calendar-plus: aligns composer and npm packages

--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,8 @@
     },
     "config": {
         "allow-plugins": {
-            "composer/installers": true
+            "composer/installers": true,
+            "dealerdirect/phpcodesniffer-composer-installer": true
         }
     }
 }
