--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
         "react-big-calendar": "^0.20.3",
         "react-dom": "^16.8.2",
         "react-scroll": "^1.7.11",
+        "styled-components": "^6.1.13",
         "urijs": "^1.19.1",
         "whatwg-fetch": "^3.0.0"
     },
@@ -21,7 +22,10 @@
         "@babel/preset-env": "^7.3.1",
         "@babel/preset-react": "^7.0.0",
         "@babel/register": "^7.0.0",
-        "autoprefixer": "^9.6.0",
+        "@ilabdev/copy": "^1.0.0",
+        "@nuxt/friendly-errors-webpack-plugin": "^2.6.0",
+        "@webpack-cli/generators": "^3.0.7",
+        "autoprefixer": "^10.4.19",
         "babel-loader": "^8.0.5",
         "babel-plugin-transform-class-properties": "^6.24.1",
         "css-loader": "^2.1.0",
