calendar-plus: align packages to build css

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
         "es6-promise": "^4.2.6",
         "hash-generator": "^0.1.0",
         "moment": "^2.24.0",
+        "postcss": "^8.5.3",
         "prop-types": "^15.7.2",
         "react": "^16.8.2",
         "react-big-calendar": "^0.20.3",
@@ -25,7 +26,7 @@
         "@ilabdev/copy": "^1.0.0",
         "@nuxt/friendly-errors-webpack-plugin": "^2.6.0",
         "@webpack-cli/generators": "^3.0.7",
-        "autoprefixer": "^10.4.19",
+        "autoprefixer": "^9.8.6",
         "babel-loader": "^8.0.5",
         "babel-plugin-transform-class-properties": "^6.24.1",
         "css-loader": "^2.1.0",
@@ -44,8 +45,8 @@
         "motion-ui": "^2.0.3",
         "postcss-loader": "^3.0.0",
         "pre-push": "^0.1.1",
-        "sass-loader": "^7.2.0",
         "sass": "^1.54.3",
+        "sass-loader": "^7.2.0",
         "style-loader": "^0.23.1",
         "system-bell-webpack-plugin": "^1.0.0",
         "webpack": "^4.29.5",
