--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
     "require": {
         "ext-calendar": "*",
         "composer/installers": "~1.0",
-        "johngrogg/ics-parser": "^v3.4.0",
+        "johngrogg/ics-parser": "^3.2",
         "mexitek/phpcolors": "~1.0"
     },
     "require-dev": {
