assets generation fix and split between legacy css and regular css

--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
         "react-big-calendar": "^0.20.3",
         "react-dom": "^16.8.2",
         "react-scroll": "^1.7.11",
-        "styled-components": "^6.1.13",
+        "styled-components": "^6.1.18",
         "urijs": "^1.19.1",
         "whatwg-fetch": "^3.0.0"
     },
@@ -22,43 +22,43 @@
         "@babel/preset-env": "^7.3.1",
         "@babel/preset-react": "^7.0.0",
         "@babel/register": "^7.0.0",
-        "@ilabdev/copy": "^1.0.0",
-        "@nuxt/friendly-errors-webpack-plugin": "^2.6.0",
-        "@webpack-cli/generators": "^3.0.7",
-        "autoprefixer": "^10.4.19",
+        "@soda/friendly-errors-webpack-plugin": "^1.8.1",
+        "autoprefixer": "^9.6.0",
         "babel-loader": "^8.0.5",
-        "babel-plugin-transform-class-properties": "^6.10.2",
+        "babel-plugin-transform-class-properties": "^6.24.1",
         "css-loader": "^7.1.2",
         "del": "^3.0.0",
         "foundation-sites": "^6.5.3",
-        "gulp": "^5.0.0",
-        "gulp-archiver": "^0.0.0",
+        "gulp": "^4.0.0",
+        "gulp-archiver": "^1.0.0",
         "gulp-clean": "^0.4.0",
-        "gulp-phpcs": "^3.1.0",
-        "gulp-wp-pot": "^2.5.0",
-        "json-server": "^1.0.0-beta.1",
-        "mini-css-extract-plugin": "^2.9.0",
+        "gulp-composer": "^0.4.5",
+        "gulp-copy": "^4.0.1",
+        "gulp-phpcs": "^2.2.0",
+        "gulp-wp-pot": "^2.3.3",
+        "json-server": "^0.14.2",
+        "mini-css-extract-plugin": "^2.9.2",
         "motion-ui": "^2.0.3",
         "postcss-loader": "^8.1.1",
         "pre-push": "^0.1.1",
         "sass": "^1.54.3",
-        "sass-loader": "^16.0.0",
-        "style-loader": "^0.23.1",
-        "webpack": "^5.93.0",
+        "sass-loader": "^16.0.5",
+        "style-loader": "^4.0.0",
+        "webpack": "^5.91.0",
         "webpack-cli": "^5.1.4",
-        "webpack-dev-server": "^5.0.4",
-        "webpack-merge": "^4.2.1",
+        "webpack-dev-server": "^4.15.1",
+        "webpack-merge": "^5.10.0",
         "what-input": "^5.1.3"
     },
     "scripts": {
         "postinstall_disabled": "npm run build && npm run gulp",
-        "watch": "webpack --watch --config ./webpack.config.babel.js --mode development",
+        "watch": "webpack --watch --config ./webpack.config.babel.js --env.target=development",
         "watch:production": "webpack --watch --config ./webpack.config.babel.js",
-        "watch:admin": "webpack --watch --config ./webpack.config.babel.js --env include='admin'",
-        "watch:front": "webpack --watch --config ./webpack.config.babel.js --env include='front'",
-        "watch:public": "webpack --watch --config ./webpack.config.babel.js --env include='public'",
-        "build": "webpack --mode production --config ./webpack.config.babel.js",
-        "gulp": "gulp package"
+        "watch:admin": "webpack --watch --config ./webpack.config.babel.js --env.include='admin'",
+        "watch:front": "webpack --watch --config ./webpack.config.babel.js --env.include='front'",
+        "watch:public": "webpack --watch --config ./webpack.config.babel.js --env.include='public'",
+        "build": "webpack --mode=production --config ./webpack.config.babel.js",
+        "gulp": "gulp"
     },
     "babel": {
         "presets": [
