--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
         "hash-generator": "^0.1.0",
         "moment": "^2.24.0",
         "prop-types": "^15.7.2",
-        "react": "^16.8.2",
-        "react-big-calendar": "^0.20.3",
-        "react-dom": "^16.8.2",
+        "react": "^18.3.1",
+        "react-big-calendar": "^1.19.2",
+        "react-dom": "^18.3.1",
         "react-scroll": "^1.7.11",
         "styled-components": "^6.1.18",
         "urijs": "^1.19.1",
@@ -48,11 +48,12 @@
         "webpack-cli": "^5.1.4",
         "webpack-dev-server": "^4.15.1",
         "webpack-merge": "^5.10.0",
+        "webpack-remove-empty-scripts": "^1.1.1",
         "what-input": "^5.1.3"
     },
     "scripts": {
         "postinstall_disabled": "npm run build && npm run gulp",
-        "watch": "webpack --watch --config ./webpack.config.babel.js --env.target=development",
+        "watch": "webpack --watch --mode=development --config ./webpack.config.babel.js",
         "watch:production": "webpack --watch --config ./webpack.config.babel.js",
         "watch:admin": "webpack --watch --config ./webpack.config.babel.js --env.include='admin'",
         "watch:front": "webpack --watch --config ./webpack.config.babel.js --env.include='front'",
